environments/develop/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stud-for-stud-deployments
  namespace: stud-for-stud-development
  labels:
    app: stud-for-stud
    environment: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stud-for-stud
  template:
    metadata:
      labels:
        app: stud-for-stud
        environment: development
    spec:
      containers:
        - name: stud-for-stud
          image: harbor.chay-techs.com/studforstud/studforstud-app:develop_3fe72a0
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: nfs-pv-storage
              mountPath: "/nfs"
              readOnly: false  # Ensure it's not read-only
      imagePullSecrets:
        - name: harbor-registry-key
      volumes:
        - name: nfs-pv-storage
          persistentVolumeClaim:
            claimName: nfs-pvc-studforstud-development
